maps markers, info panel

--- a/lab-pv-system/src/app/components/desktop/main/information-panel/information-panel.component.html
+++ b/lab-pv-system/src/app/components/desktop/main/information-panel/information-panel.component.html
@@ -1,1 +1,16 @@
-<p>information-panel works!</p>
+<div class="card" #ipanel>
+    <div class="card-body">
+      <div #machineInfo class="row">
+          <div class="col-md-2 col-sm-5 col-xs-5 col-5">
+            <h4>Lab Machine Info</h4>
+          </div>
+          <div class="col-md-10 col-sm-7 col-xs-7 col-7">
+            <div class="row">
+                <div class="col-3"><div class="row" style="background-color: black;color: white;justify-content:center;">PV-ID</div><div class="row" style="justify-content:center;">1234</div></div>
+                <div class="col-3"><div class="row" style="background-color: black;color: white;justify-content:center;">LAB-ID</div><div class="row" style="justify-content:center;">0</div></div>
+                <div class="col-3"><div class="row" style="background-color: black;color: white;justify-content:center;">LAB-ORDER</div><div class="row" style="justify-content:center;">Free</div></div>
+            </div>
+          </div>
+      </div>
+    </div>
+</div>
