--- a/lab-pv-system/src/app/components/desktop/main/main.component.html
+++ b/lab-pv-system/src/app/components/desktop/main/main.component.html
@@ -1,1 +1,16 @@
-<app-map-panel></app-map-panel>
+<div>
+    <div class="row no-gutters p-1">
+        <div class="col-12">
+            <app-information-panel ></app-information-panel>
+        </div>
+    </div>
+
+    <div class="row no-gutters p-1" style="height: 560px;">
+        <div class="col-lg-10 col-md-7">
+            <app-map-panel></app-map-panel>
+        </div>
+        <div class="col-lg-2 col-md-5">
+            <app-control-panel ></app-control-panel>
+        </div>
+    </div>
+</div>
