--- a/lab-pv-system/src/app/components/desktop/main/map-panel/map-panel.component.html
+++ b/lab-pv-system/src/app/components/desktop/main/map-panel/map-panel.component.html
@@ -1,1 +1,6 @@
-<div #gmap style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;"></div>
+
+<div class="card ml-1" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;">
+    <div class="card-body">
+        <div #gmap style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;"></div>
+    </div>
+</div>
