--- a/lab-pv-system/src/app/components/desktop/main/control-panel/control-panel.component.html
+++ b/lab-pv-system/src/app/components/desktop/main/control-panel/control-panel.component.html
@@ -1,5 +1,5 @@
 <div class="card ml-1" #cpanel style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;">
     <div class="card-body">
-      This is some text within a card body.
+      Control Panel
     </div>
 </div>
