--- a/lab-pv-system/src/app/components/desktop/main/map-panel/map-panel.component.html
+++ b/lab-pv-system/src/app/components/desktop/main/map-panel/map-panel.component.html
@@ -4,3 +4,16 @@
         <div #gmap style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;"></div>
     </div>
 </div>
+
+<ng-template #optionTemplate>
+    <div class="modal-header">
+      <h4 class="modal-title pull-left">Options</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+        <button class="btn btn-primary">Assign LAB</button>
+        <button class="btn btn-primary ml-2">Move to</button>
+    </div>
+  </ng-template>
